--- a/GamingSite/sonar-project.properties
+++ b/GamingSite/sonar-project.properties
@@ -1,19 +1,19 @@
 # Required Project Information
-sonar.projectKey=nms
-sonar.projectName=nms
+sonar.projectKey=GamingSite
+sonar.projectName=GamingSite
 sonar.projectVersion=1.0
 
 # SonarQube Server URL (Ensure this matches your setup)
 sonar.host.url=http://localhost:9000  
 
 # Authentication (if required)
-sonar.token=squ_d53ee8f40cfa1446d37e9e8a2f543a8c1ad312f0
+sonar.token=sqa_9240bd1629e35197d1080e84d336c1bcaf4e9a85
 
 # Source Code Location
 sonar.sources=src
 
 # Language (Uncomment if needed)
-# sonar.language=java
+sonar.language=java
 
 # Java Version (if applicable)
 sonar.java.source=17
