--- a/GamingSite/src/test/resources/application.properties
+++ b/GamingSite/src/test/resources/application.properties
@@ -1,3 +1,6 @@
+server.port=8082
+
+# Keep the rest as-is
 spring.datasource.url=jdbc:h2:mem:gamesdb;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -10,9 +13,5 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-
 spring.jpa.defer-datasource-initialization=true
-server.port=9091
-file.import.path=src/main/resources/data/SampleData.xls
-// origin/data-validation
 jwt.secret=MyJwtSecretKey
